Use modern reflective Base64 construction